Add Image, Description, & Ingredients to cholay.html

--- a/recipes/cholay.html
+++ b/recipes/cholay.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     <h1> Cholay (Curried Chickpeas) Recipe </h1>
+    <img src = https://bit.ly/3lAVXdU alt = "Yummy Picture of Cholay (Curried Chickpeas)"> 
+    <h2> Description </h2>
+    <p> This is a very flavorful recipe from North India, usually eaten with fried bread like bhatura or puri. 
+        I like to serve it over rice for a very filling meal. You can also try it as a quick snack over toasted bread. 
+        This recipe is much quicker to make if you use precooked canned beans, but I like to think that the authentic 
+        flavor comes from doing it the hard way!
+    </p>
+
 </body>
 </html>
