Removed floating bullet point

--- a/recipes/cholay.html
+++ b/recipes/cholay.html
@@ -15,6 +15,22 @@
         This recipe is much quicker to make if you use precooked canned beans, but I like to think that the authentic 
         flavor comes from doing it the hard way!
     </p>
+    <ul>
+        <li> 2 cups water </li>
+        <li> 1 tea bag </li>
+        <li> 1 bay leaf </li>
+        <li> 2 (15.5 ounce) cans garbanzo beans, drained </li>
+        <li> 2 tablespoons vegetable oil, divided </li>
+        <li> 1 onion, sliced </li>
+        <li> 3 tomatoes, chopped </li>
+        <li> ¼ cup fresh cilantro leaves</li>
+        <li> 1 teaspoon ground coriander</li>
+        <li> 1 teaspoon cumin seeds</li>
+        <li> 1 teaspoon grated fresh ginger root</li>
+        <li> 1 teaspoon grated garlic </li> 
+        <li> 1 onion, finely chopped </li>
+        <li> </li>
+    </ul>
 
 </body>
 </html>
