--- a/recipes/cholay.html
+++ b/recipes/cholay.html
@@ -15,6 +15,7 @@
         This recipe is much quicker to make if you use precooked canned beans, but I like to think that the authentic 
         flavor comes from doing it the hard way!
     </p>
+    <h3> Ingredients </h3> 
     <ul>
         <li> 2 cups water </li>
         <li> 1 tea bag </li>
@@ -29,8 +30,30 @@
         <li> 1 teaspoon grated fresh ginger root</li>
         <li> 1 teaspoon grated garlic </li> 
         <li> 1 onion, finely chopped </li>
-        <li> </li>
     </ul>
+    <h3> Steps </h3>
+    <ol type = 'i'> 
+        <li> 
+            Place the 2 cups water, tea bag, and bay leaf into a pot, and bring water to a boil. 
+            Reserving about 1/2 cup garbanzo beans, stir the beans into the boiling water. 
+            When beans are heated through, discard the tea bag and bay leaf. 
+            Remove from heat. Drain the beans, reserving water, and set aside.
+        </li>
+        <li>
+            Heat 2 teaspoons oil in a skillet over medium heat, and saute the sliced 
+            onion until tender. Remove from heat, cool, and mix in the reserved garbanzo 
+            beans, 1 tomato, and 1/2 the cilantro leaves. Set aside.
+        </li>
+        <li> 
+            Heat the remaining oil in a skillet over medium heat. Blend in the coriander, 
+            cumin seeds, ginger, and garlic. Cook and stir for 15 to 20 seconds, until lightly 
+            browned. Mix in the turmeric. Stir the chopped onion into the skillet, and cook until 
+            tender. Mix in the remaining tomatoes. Season with salt, cayenne pepper, and garam masala. 
+            Bring the tomato liquid to a boil, and cook about 5 minutes. Stir in the boiled garbanzo 
+            beans, sliced onion mixture, and enough of the reserved water to attain a thick, gravy-like 
+            consistency. Continue to cook and stir 5 minutes. Garnish with the remaining cilantro leaves to serve.
+        </li>
+    </ol>
 
 </body>
 </html>
