--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Odin Recipes</title>
+        <title>Odin Indian Recipes</title>
     </head>
 
     <body>
-        <h1> Odin Recipes </h1> 
+        <h1> Odin Indian Recipes </h1> 
+        <img src = ".img/taj_mahal.jpeg">
         <p> <a href="./recipes/cholay.html"> Recipe 1: Cholay (Curried Chickpeas)</a></p>
     </body>
 </html>
