--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1> Odin Indian Recipes </h1> 
-        <img src = ".img/taj_mahal.jpeg">
+        <img src = "./img/taj_mahal.jpeg">
         <p> <a href="./recipes/cholay.html"> Recipe 1: Cholay (Curried Chickpeas)</a></p>
     </body>
 </html>
