--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <body>
         <h1> Odin Indian Recipes </h1> 
         <img src = "./img/taj_mahal.jpeg">
-        <p> <a href="./recipes/cholay.html"> Recipe 1: Cholay (Curried Chickpeas)</a></p>
+        <h3> Recipes </h3>
+        <ul> 
+            <li><a href="./recipes/cholay.html"> Cholay (Curried Chickpeas)</a></li>
+            <li> </li>
+            <li> </li>
+        </ul>
     </body>
 </html>
