--- a/recipes/cholay.html
+++ b/recipes/cholay.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1> Cholay (Curried Chickpeas) Recipe </h1>
-    <img src = https://bit.ly/3lAVXdU alt = "Yummy Picture of Cholay (Curried Chickpeas)"> 
+    <img src = "../img/cholay.png" alt = "Yummy Picture of Cholay (Curried Chickpeas)"> 
     <h2> Description </h2>
     <p> This is a very flavorful recipe from North India, usually eaten with fried bread like bhatura or puri. 
         I like to serve it over rice for a very filling meal. You can also try it as a quick snack over toasted bread. 
