Add gulab_jamun.html & related information.
The gulab_jamun file is structured similarly to the other files.
Used the quick_split file to convert ingredients into html code.
Uploaded new images for the pictures on the website.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h3> Recipes </h3>
         <ul> 
             <li><a href="./recipes/cholay.html"> Cholay (Curried Chickpeas)</a></li>
-            <li> </li>
-            <li> </li>
+            <li><a href="./recipes/chapati.html"> Chapati (Indian Bread)</a></li>
+            <li><a href="./recipes/gulab_jamun.html"> Gulab Jamun (Indian Sweet)</a></li>
         </ul>
     </body>
 </html>
