Link pages to css file

--- a/recipes/cholay.html
+++ b/recipes/cholay.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe for Cholay</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1> Cholay (Curried Chickpeas) Recipe </h1>
-    <img src = "../img/cholay.png" alt = "Yummy Picture of Cholay (Curried Chickpeas)"> 
+    <img src = "../img/cholay_2.jpeg" alt = "Yummy Picture of Cholay (Curried Chickpeas)"> 
     <h2> Description </h2>
     <p> This is a very flavorful recipe from North India, usually eaten with fried bread like bhatura or puri. 
         I like to serve it over rice for a very filling meal. You can also try it as a quick snack over toasted bread. 
