--- a/recipes/gulab_jamun.html
+++ b/recipes/gulab_jamun.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe for Gulab Jamun</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1> Gulab Jamun or Kala Jam (Waffle Balls)</h1>
-    <img src = "../img/gulab_jamun.png" alt = "Yummy Picture of Gulab Jamun (Indian Sweet)"> 
+    <img src = "../img/gulab_jamun_2.jpeg" alt = "Yummy Picture of Gulab Jamun (Indian Sweet)"> 
     <h2> Description </h2>
     <p> 
         These are like little waffle balls that sit in and absorb a sugary rosewater syrup.
