Add title_image class & update image

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Odin Indian Recipes</title>
+        <link rel="stylesheet" href="./styles.css">
     </head>
 
     <body>
         <h1> Odin Indian Recipes </h1> 
-        <img src = "./img/taj_mahal.jpeg">
+        <img src = "./img/taj_mahal_2.jpeg">
         <h3> Recipes </h3>
         <ul> 
             <li><a href="./recipes/cholay.html"> Cholay (Curried Chickpeas)</a></li>
